# toy-fret-model

./: .gitignore  pipeline.ipynb  pipeline.py  pyproject.toml  read_hd5.py
data/: dual-camp-cgmp-imaging.csv
notebooks/: pipeline.ipynb
